@@ -1,5 +1,6 @@
 SyncEvolution 0.4, xxxxxxx
 --------------------------
+* improved error reporting when selected server is not configured
 * fix: in vCard 2.1 7-bit is the default encoding, so 8-bit
   UTF-8 characters are now avoided with quoted-printable encoding
   (illegal encoding had not caused problems though)
